test1/force-app/main/default/objects/Invoice__c/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <label>MaxValue</label>
    <summarizedField>Sell_Item__c.Sell_Item_Price__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>