test1/force-app/main/default/objects/Invoice__c/fields/MinValue__c.field-meta.xml
<CustomField>
    <fullName>MinValue__c</fullName>
    <label>MinValue</label>
    <summarizedField>Sell_Item__c.Sell_Item_Price__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>