test1/force-app/main/default/objects/Invoice__c/fields/Sell_Count__c.field-meta.xml
<CustomField>
    <fullName>Sell_Count__c</fullName>
    <label>Sell Count</label>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>