test1/force-app/main/default/objects/Invoice__c/validationRules/ClosedDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Invoice_Status__c , &apos;Closed&apos;)  &amp;&amp;  ISBLANK( Invoice_Closed_Date__c )</errorConditionFormula>
    <errorDisplayField>Invoice_Closed_Date__c</errorDisplayField>
    <errorMessage>Closed Date should not be blank.</errorMessage>
</ValidationRule>