test1/force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Desc__c</columns>
    <columns>Invoice_Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>